[package]
name = "claim-ip"
version = "1.0.4"
authors = ["Justin Ossevoort <github@internetionals.nl>"]
description = "Respond to ARP replies for a some address on a network interface"
repository = "https://github.com/internetionals/claim-ip"
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
env_logger = "0.8"
log = "0.4"
nix = { git="https://github.com/internetionals/nix", branch="fix_sockaddr_ll_size" }
